fix: Use overflow: hidden on body on hourglasses

--- a/public/app/hourglass.css
+++ b/public/app/hourglass.css
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+    overflow: hidden;
     position: relative;
     font-family: magic-school, serif;
     height: 100%;
